Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82580

[REG 5.12.3->5.12.4] After window with native menubar is moved to different screen content position is broken

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.15.0 RC
    • 5.12.4, 5.12.7, 5.13.2, 5.14.1
    • QPA: Windows
    • None
    • Windows
    • 1d403ef81a2b9b19383f45b27d53149e122d65d8 (qtbase/5.14, 14.3.2020, 5.14.3)

      When window is moved between 2 monitors with same scale (no window resize when window moved to 2nd screen) and Window has MenuBar from Qt.labs.platform, content is shifted under menubar visually, and mouse events (press, hover, etc) are misplaced. See video Bug_video.mp4 .

      Any window resize fix issue.

      If 2 monitor setup has a different scale, bug is harder to reproduce as when window is moved between screens, window resize will occur and fix an issue.

      This change introduced with this commit:
      https://codereview.qt-project.org/c/qt/qtbase/+/260778

        1. Bug_video_2.mp4
          1.71 MB
          Roman Lazurak
        2. Bug_video.mp4
          2.04 MB
          Roman Lazurak
        3. Menu_bug.zip
          6 kB
          Roman Lazurak
        4. qtbug82580.zip
          3 kB
          Friedemann Kleint
        5. qtdiag.txt
          8 kB
          Roman Lazurak
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            headhunter Roman Lazurak
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes